--- a/.github/workflows/content-api.yml
+++ b/.github/workflows/content-api.yml
@@ -1,4 +1,4 @@
-name: content-api2
+name: content-api
 
 # This workflow is triggered on push to the 'content-web' directory of the  master branch of the repository
 on:
